ncmpc 0.26 - not yet released
* require libmpdclient 2.9
* adapt to lirc 0.9.4
* lyricswiki: update regex
* fix gcc 7 warnings

ncmpc 0.25 - (2016-08-18)
* implement "%disc%"
* lyricswiki: handle redirects
* lyricswiki: update XML format


ncmpc 0.24 - (2014-07-14)
* fix crash on "jump" (hotkey ".")
* save keys to path specified by --key-file


ncmpc 0.23 - (2014-07-10)
* fix broken l10n in out-of-tree builds


ncmpc 0.22 - (2014-06-09)
* rename "playlist" to "queue"
* remove useless "Connected to ..." message
* require libmpdclient 2.3, MPD 0.16
* patched color line-flags
* configuration option "search-format"
* remove broken leoslyrics plugin
* show audio format in song screen


ncmpc 0.21 - (2013-04-11)
* add a chat screen for communication with other clients on the same server
* song format: evaluate literal strings as true
* fix crash on search screen when disconnected
* screen_queue: fix crash on CMD_SCREEN_SWAP when the queue is empty
* lyricswiki: fix Ruby 2.0 and UTF-8


ncmpc 0.20 - (02/05/2012)
* increase connection timeout to 5 seconds
* screen_queue: follow songs when they are moved out of the visible
  range
* add a doxygen configuration file. Documentation will be generated if the
  configure script is called with --enable-documentation
* screen_lyrics: You can now edit lyrics by pressing 'e'
* configurable timeout for MPD connections
* screen_keydef: show command descriptions
* show the paths of the configuration files in --version output


ncmpc 0.19 - (07/23/2011)
* require libmpdclient 2.2
* show real server address in status message
* fix crash after "clear" command
* po: added Polish translation


ncmpc 0.18 - (09/22/2010)
* screen_song: show song range
* screen_artist: respect artist when adding albums
* po: added Italian translation


ncmpc 0.17 - (06/22/2010)
* screen_queue: fix range selection check on "shuffle"
* screen_browser: check for error before adding song to playlist
* po: added Brazilian Portuguese translation

