@@ -2,6 +2,7 @@ ncmpc 0.26 - not yet released
 * require libmpdclient 2.9
 * adapt to lirc 0.9.4
 * lyricswiki: update regex
+* screen_song: show "f" and "dsd" formats
 * fix gcc 7 warnings
 
 ncmpc 0.25 - (2016-08-18)
